--- a/give-classes.html
+++ b/give-classes.html
@@ -91,11 +91,47 @@
 
                 </fieldset>
 
+                <fieldset id="schedule-items">
+                    <legend>Horários disponíveis
+                        <button id="add-time">+ Novo horário</button>
+                    </legend>
 
+                    <div class="schedule-item">
 
+                        <div class="select-block">
+                            <label for="weekday">Dia da semana</label>
+                            <select name="weekday[]" required>
+                                <option value="">Selecione uma opção</option>
+                                <option value="0">Domingo</option>
+                                <option value="1">Segunda-feira</option>
+                                <option value="2">Terça-feira</option>
+                                <option value="3">Quarta-feira</option>
+                                <option value="4">Quinta-feira</option>
+                                <option value="5">Sexta-feira</option>
+                                <option value="6">Sábado</option>
+                            </select>
+                        </div>
 
+                        <div class="input-block">
+                            <label for="time_from">Das</label>
+                            <input type="time" name="time_from[]" required>
+                        </div>
 
+                        <div class="input-block">
+                            <label for="time_to">Até</label>
+                            <input type="time" name="time_to[]" required>
+                        </div>
+                    </div>
+                </fieldset>
             </form>
+
+            <footer>
+                <p>
+                    <img src="/images/icons/warning.svg" alt="Aviso importante">
+                    Importante!!<br>Preencha todos os campos!
+                </p>
+                <button type="submit" form="create-class">Salvar cadastro</button>
+            </footer>
         </main> 
     </div>
 
